MOJ-146 validatie-hulp bij importeren van opdrachten: alle filedetails en eventuele configuratie-errors in 1 overzicht.

--- a/src/main/resources/static/css/control.css
+++ b/src/main/resources/static/css/control.css
@@ -61,3 +61,16 @@ div.alert.show {
 div.font10px {
     font-size: 10px;
 }
+.table .error {
+    color: red;
+    font-weight: bold;
+}
+.cursorPointer {
+    cursor:pointer;
+}
+.hide {
+    display: none;
+}
+.minWidth300 {
+    min-width: 300px;
+}
