--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <div class="tab-pane fade " id="pills-configuratie" role="tabpanel" aria-labelledby="pills-configuratie-tab">
-                <h6>Inladen van opdrachten. Aantal goed geconfigureerde locaties: [[${locationList.size()}]].</h6><br/>
+                <h6>Inladen van opdrachten. Aantal geconfigureerde locaties: [[${locationList.size()}]].</h6><br/>
 
                 <div class="p-2 col-12" th:if="${locationList.size()>0}">
                     <select class="p-2" th:disabled="${locationList.size()==1}" id="selectedYear" onchange="if (this.value) {scanAssignments(this.value)}">
@@ -198,7 +198,7 @@
                     </button>
                 </div>
                 <div class="p-2 col-12" th:if="${locationList.size()==0}">
-                    U moet eerst zorgen voor goede lokcaties
+                    U moet eerst de goede locatie configureren van de opdrachten.
                 </div>
                 <div class="p-2 col-12">
 
@@ -237,7 +237,7 @@
                 <a class="nav-link" id="pills-opdrachtdetails-tab" data-toggle="pill" href="#pills-opdrachtdetails" role="tab" aria-controls="pills-opdrachtdetails" aria-selected="false">Opdrachtdetails</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="pills-opdrachtconfiguratie-tab" data-toggle="pill" href="#pills-opdrachtconfiguratie" role="tab" aria-controls="pills-opdrachtdetails" aria-selected="false">Opdrachtconfiguratie</a>
+                <a class="nav-link" id="pills-opdrachtconfiguratie-tab" data-toggle="pill" href="#pills-opdrachtconfiguratie" role="tab" aria-controls="pills-opdrachtconfiguratie" aria-selected="false">Opdrachtconfiguratie</a>
             </li>
             </ul>
             <div class="tab-content roundGrayBorder" id="pills-tabContent2">
@@ -259,7 +259,7 @@
                     <div th:remove="tag" th:utext="${teamDetailCanvas}"></div>
                 </div>
                 <div class="tab-pane fade" id="pills-opdrachtconfiguratie" role="tabpanel" aria-labelledby="pills-opdrachtconfiguratie-tab">
-                    <h6>Bekijk hier de configuratie van de geselecteerde opdracht</h6>
+                    <h6>Bekijk hier de bestandsdata van de geselecteerde opdracht(en)</h6>
 
                     <div class="font10px">
                         <div th:remove="tag" th:utext="${opdrachtConfiguraties}"></div>
