MOJ-150 prototype voor demo functionaliteit Gamemaster GUI.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -61,3 +61,15 @@ svg {
 button[disabled] {
     pointer-events: none;
 }
+.inlineBlock {
+    display: inline-block;
+}
+.alignCenter {
+    text-align: center;
+}
+.cursorPointer {
+    cursor:pointer;
+}
+.paddingLeft50 {
+    padding-left: 50px;
+}
