--- a/src/main/resources/static/css/control.css
+++ b/src/main/resources/static/css/control.css
@@ -24,6 +24,38 @@ svg {
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
 }
+div.flex-column, .row.p-2 {
+    border: 2px solid black;
+}
+h6 {
+    font-style: italic;
+}
+.form-check.input-group.radio:hover,.nav-link:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+.nav-pills .nav-link, .roundGrayTabBorder {
+    border-radius: .6rem;
+    border: 1px solid lightgray;
+    border-bottom-left-radius: 0.2rem;
+    border-bottom-right-radius: 0.2rem;
+}
+ul.nav {
+    padding-left: 8px;
+}
+.roundGrayBorder {
+    border-radius: .6rem;
+    border: 1px solid lightgray;
+}
+.nav-pills .nav-link.active {
+    border: 1px solid #007bff;
+}
+.paddingLeft50,.tab-content>div {
+    padding-left: 50px;
+}
+table th {
+    background-color: deepskyblue;
+}
 
 .circle_animation {
     stroke-dasharray: 440; /* this value is the pixel circumference of the circle */
@@ -58,7 +90,7 @@ svg {
 div.alert.show {
     z-index: 1;
 }
-div.font10px {
+.font10px {
     font-size: 10px;
 }
 .table .error {
@@ -68,9 +100,55 @@ div.font10px {
 .cursorPointer {
     cursor:pointer;
 }
-.hide {
+body .hide {
     display: none;
 }
 .minWidth300 {
     min-width: 300px;
+}
+.minWidth100 {
+    min-width: 100px;
+}
+.minWidth150 {
+    min-width: 150px;
+}
+.minWidth200 {
+    min-width: 200px;
+}
+.maxWidth300 {
+    max-width: 300px;
+}
+.alignRight {
+    text-align: right;
+}
+.alignCenter {
+    text-align: center;
+}
+.table tbody tr:hover,.selected {
+    background-color: aliceblue;
+}
+.inlineBlock {
+    display: inline-block;
+}
+.bold {
+    font-weight: bold;
+}
+.noBottomMargin {
+    margin-bottom: 0px;
+}
+select.disabled {
+    pointer-events: none;
+}
+.tableSubHeader {
+    background-color: turquoise;
+}
+.scrollableTable {
+    max-height: 500px;
+    overflow-y: scroll;
+    display: block;
+    overflow-x: hidden;
+}
+
+.selected .fa-angle-double-right:before {
+    content: "\f103";
 }
