--- a/src/main/resources/static/css/registration.css
+++ b/src/main/resources/static/css/registration.css
@@ -1,3 +1,12 @@
 .btn:hover {
     cursor: pointer;
 }
+.floatLeft {
+   float: left;
+}
+.floatRight {
+    float: right;
+}
+.hide {
+    display:none;
+}
