--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
 
             <div id="content" th:if="${running}" th:attr="finished=${finished},submittime=${submittime}">
                 <div class="p-2">
-                    <h3>Assignment: [[${assignment}]] <span th:if="${(solution)}"> - (With Solution)</span> </h3>
+                    <h3>Assignment: [[${assignment}]] <span th:if="${(solution)}"> (with provided solution)</span> </h3>
                 </div>
                 <div id="alert-container">
                     <div th:if="${finished and (finalscore &gt; 0)}" class="alert alert-success p-4" role="alert">
@@ -107,6 +107,14 @@
             </div>
             <div class="p-2 align-self-center">
                 <h2>Team: [[${team}]]</h2>
+                <div class="p-2 align-self-center alignCenter">
+                    <button class="cursorPointer" data-toggle="modal" data-target="#editTeam-modal" >edit team</button>
+                </div>
+            </div>
+            <div class="p-2 text-center">
+                <br/>
+                <br/>
+                <br/>
             </div>
             <div th:if="${running}" class="p-2 align-self-center">
                 <div class="text-center">
@@ -127,27 +135,18 @@
                     </svg>
                 </div>
             </div>
+
             <div th:if="${running}" class="p-2 text-center">
-                <a class="btn w-50 btn-info text-white"
-                   th:href="@{/feedback}"
-                   target="_blank"><span class="fa fa-gamepad pr-1"></span>Live Feedback</a>
-            </div>
-            <div th:if="${running}" class="p-2 text-center">
-                <a class="btn w-50 btn-info text-white"
-                   th:href="@{/rankings}"
-                   target="_blank"><span class="fa fa-trophy pr-1"></span>Rankings</a>
-            </div>
-            <div th:if="${running}" class="mt-5 p-2 text-center">
                 <a class="btn w-50 btn-warning text-white"
                    th:href="@{/javadoc/api/index.html(overview-tree.html)}"
                    target="_blank">Javadoc</a>
             </div>
             <div th:if="${running}" class="p-2 text-center">
-                <button id="compile" class="btn w-50 btn-success" th:disabled="${submitDisabled}">Compile</button>
+                <button id="compile" class="btn w-50 btn-success" th:disabled="${finished}">Compile</button>
             </div>
             <div th:if="${running}" class="p-2  text-center">
                 <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal"
-                        onclick="resetTabColor();" th:disabled="${submitDisabled}">Test
+                        onclick="resetTabColor();" th:disabled="${finished}">Test
                 </button>
             </div>
             <div th:if="${running}" class="mt-5 p-2 text-center">
@@ -163,8 +162,19 @@
         <div class="mr-auto p-2">
             <img th:src="@{/images/logo_first8_150x39.png}" class="img-fluid"
                  src="/static/images/logo_first8_150x39.png"/>
-
-
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            <div th:if="${running}" class="p-2 text-center inlineBlock minWidth100">
+                <a class="btn btn-info text-white"
+                   th:href="@{/feedback}"
+                   target="_blank"><span class="fa fa-gamepad pr-1"></span>Live Feedback</a>
+            </div>
+            <div th:if="${running}" class="p-2 text-center inlineBlock minWidth100">
+                <a class="btn btn-info text-white"
+                   th:href="@{/rankings}"
+                   target="_blank"><span class="fa fa-trophy pr-1"></span>Rankings</a>
+            </div>
         </div>
         <div class="mr-auto p-2">&nbsp;
             <i>[[${bonus}]]<span th:if="${labels!=null && labels.size()>0}">. Points for each individual test: [[${labels.toString().replace("_","=")}]]</span></i>
@@ -200,12 +210,42 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" id="test" class="btn btn-primary" th:disabled="${submitDisabled}">Run Tests</button>
+                <button type="button" id="test" class="btn btn-primary" th:disabled="${finished}">Run Tests</button>
             </div>
         </div>
     </div>
 </div>
-
+<!-- Modal Tests -->
+<div class="modal fade" id="editTeam-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="contactDetailsLabel">Update name or contact details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Update your team name.</p>
+                <p contenteditable="true" class="paddingLeft50">[[${team}]]</p>
+                <p>Update your contact details.</p>
+                <form class="paddingLeft50">
+                    <div class="form-check" th:each="test : ${tests}">
+                        <label class="form-check-label">
+                            <input name="test" class="form-check-input" type="checkbox" th:value="${test.uuid}"
+                                   checked="true">
+                            [[${test.shortName}]]
+                        </label>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" id="saveContactDetails" class="btn btn-primary" data-dismiss="modal">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Modal confirm submit -->
 <div class="modal fade" id="confirm-submit-modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -229,7 +269,9 @@
         </div>
     </div>
 </div>
-
+<script type="text/javascript">
+    assignmentName='[[${assignmentName}]]';
+</script>
 
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
