[MOJ-153] geef in labels aan dat opdracht (nog) niet geschikt is voor officiele online competitie

--- a/src/main/resources/static/css/control.css
+++ b/src/main/resources/static/css/control.css
@@ -152,3 +152,9 @@ select.disabled {
 .selected .fa-angle-double-right:before {
     content: "\f103";
 }
+.nowrap {
+    white-space: nowrap;
+}
+.smallBlackBorder {
+    border: 1px solid black;
+}
