--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -39,19 +39,33 @@
         <div class="col-8"  >
         <ul class="nav nav-pills" id="pills-tab" role="tablist">
             <li class="nav-item">
-                <a class="nav-link" id="pills-competitie-tab" data-toggle="pill" href="#pills-competitie" role="tab" aria-controls="pills-competitie" aria-selected="false">Snel starten</a>
+                <a class="nav-link active" id="pills-competitie-tab" data-toggle="pill" href="#pills-competitie" role="tab" aria-controls="pills-competitie" aria-selected="true">Snel starten</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" id="pills-wedstrijdverloop-tab" data-toggle="pill" href="#pills-wedstrijdverloop" role="tab" aria-controls="pills-wedstrijdverloop" aria-selected="true">Dashboard</a>
+                <a class="nav-link" id="pills-wedstrijdverloop-tab" data-toggle="pill" href="#pills-wedstrijdverloop" role="tab" aria-controls="pills-wedstrijdverloop" aria-selected="true">Dashboard</a>
             </li>
-
             <li class="nav-item">
                 <a class="nav-link" id="pills-sessiebeheer-tab" data-toggle="pill" href="#pills-sessiebeheer" role="tab" aria-controls="pills-sessiebeheer" aria-selected="false">Manage competities</a>
             </li>
-
+            <li class="nav-item" th:if="${isWithAdminRole}">
+                <a class="nav-link" id="pills-uitleg-tab" data-toggle="pill" href="#pills-uitleg" role="tab" aria-controls="pills-uitleg" aria-selected="false">Uitleg</a>
+            </li>
 
         </ul>
+
         <div class="tab-content roundGrayBorder" id="pills-tabContent" >
+            <div class="tab-pane fade" id="pills-uitleg" role="tabpanel" aria-labelledby="pills-uitleg-tab" th:if="${isWithAdminRole}">
+                <h6>Belangrijke tips bij het maken van een opdracht:</h6>
+                <br/>
+                <div style="white-space: pre">
+                1. Voeg labels toe. Indien geen labels, dan staan de opdrachten op status 'not-ready'.
+                2. Met labels kun je opdrachten:
+                    - een rating geven op basis van fun, quality en difficulty.
+                    - een category geven.
+                    - een indeling geven van de bonus per individuele test.
+                3. Emoticons en Icons kun je toevoegen via Unicode, zoals deze 🏠 (&#8962 heeft code 8962) of via <i class="fas fa-apple-alt"></i> font-awesome.
+                </div>
+            </div>
             <div class="tab-pane fade" id="pills-wedstrijdverloop" role="tabpanel" aria-labelledby="pills-wedstrijdverloop-tab">
                 <h6>De uitslag van elke opdracht [[${selectedYearLabel}]]</h6>
 
@@ -192,7 +206,7 @@
                 </div>
                 <div class="tab-pane fade" id="pills-opdrachtconfiguratie" role="tabpanel" aria-labelledby="pills-opdrachtconfiguratie-tab">
                     <h6>Bekijk hier de bestandsdata van de geselecteerde opdracht(en)</h6>
-
+                    <br/>
                     <div class="font10px">
                         <div th:remove="tag" th:utext="${opdrachtConfiguraties}"></div>
                     </div>
