[MOJ-160] admin ziet bij elke opdracht direct de diff van solution tbv onderhoud opdrachten.

--- a/src/main/resources/static/css/control.css
+++ b/src/main/resources/static/css/control.css
@@ -115,6 +115,9 @@ body .hide {
 .minWidth200 {
     min-width: 200px;
 }
+.minWidth800 {
+    min-width: 800px;
+}
 .maxWidth300 {
     max-width: 300px;
 }
