--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -47,14 +47,14 @@
             <li class="nav-item">
                 <a class="nav-link" id="pills-sessiebeheer-tab" data-toggle="pill" href="#pills-sessiebeheer" role="tab" aria-controls="pills-sessiebeheer" aria-selected="false">Manage competities</a>
             </li>
-            <li class="nav-item" th:if="${isWithAdminRole}">
+            <li class="nav-item adminRole role" th:if="${isWithAdminRole}">
                 <a class="nav-link" id="pills-uitleg-tab" data-toggle="pill" href="#pills-uitleg" role="tab" aria-controls="pills-uitleg" aria-selected="false">Uitleg</a>
             </li>
 
         </ul>
 
         <div class="tab-content roundGrayBorder" id="pills-tabContent" >
-            <div class="tab-pane fade" id="pills-uitleg" role="tabpanel" aria-labelledby="pills-uitleg-tab" th:if="${isWithAdminRole}">
+            <div class="tab-pane fade  adminRole role" id="pills-uitleg" role="tabpanel" aria-labelledby="pills-uitleg-tab" th:if="${isWithAdminRole}">
                 <h6>Belangrijke tips bij het maken van een opdracht:</h6>
                 <br/>
                 <div style="white-space: pre">
@@ -96,14 +96,11 @@
                     <div class="form-group col-4">
                         <div class="row">
                             <div class="btn-group-vertical col-4">
-                                <div class="p-2 text-center" th:if="${!running}">
+                                <div class="p-2 text-center" >
                                     <button id="start" class="btn btn-success minWidth150" onclick="startTask();"><span class="fa fa-gamepad pr-1" ></span>Start Opdracht</button>
                                 </div>
                                 <div class="p-2 text-center" th:if="${running}">
                                     <button id="pause" class="btn btn-success minWidth150" onclick="pauseResume();">Pause/Resume</button>
-                                </div>
-                                <div class="p-2 text-center">
-                                    <button id="hide" class="btn btn-warning " style="visibility: hidden">hide</button>
                                 </div>
                                 <div class="p-2 text-center" th:if="${running}">
                                     <button id="play" class="btn btn-success minWidth150" onclick="window.open('/','competitie');">Speel nu</button>
@@ -407,6 +404,24 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleer</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="return doCompetitionDelete()">Verwijder</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="deltaSolution-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog minWidth800" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Toon oplossing</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body font10px">
+                <pre>code</pre>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Terug</button>
             </div>
         </div>
     </div>
