[MOJ-160] admin ziet bij elke opdracht direct de diff van solution tbv onderhoud opdrachten. (kleine js-event fix)

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -425,6 +425,7 @@
             </div>
         </div>
     </div>
+    <button type="button" class="hide openModalViaJs" data-toggle='modal' data-target='#deltaSolution-modal'>open modal via js</button>
 </div>
 
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
