[MOJ-161] admin ziet direct de testresultaten van zowel 1. de begin situatie als 2. de oplossing.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <script type="application/javascript" >
+        isWithValidation = [[${isWithValidation}]];
+    </script>
 </head>
 
 <body class="p-2">
