--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -200,7 +200,7 @@
                     <div th:remove="tag" th:utext="${assignmentDetailCanvas}"></div>
                     <br/>
                     <ul style="list-style-type: none">
-                        <li th:if="${isWithConfigurableTestScore}"> <i ><sup>(*1) = heeft extra hidden tests.</sup></i></li>
+                        <li th:if="${isWithHiddenTests}"> <i ><sup>(*1) = heeft extra hidden tests.</sup></i></li>
                         <li th:if="${isWithConfigurableTestScore}"> <i ><sup>(*2) = puntenverdeling per individuele test.</sup></i></li>
                     </ul>
                 </div>
@@ -415,10 +415,18 @@
     <div class="modal-dialog minWidth800" role="document">
         <div class="modal-content">
             <div class="modal-header">
+                <div >
                 <h5 class="modal-title">Toon oplossing</h5>
+                </div>
+                <div class="minWidth300 text-center">
+                    <button class="cursorPointer" onclick="doValidateAssignment(this.title, false)">validate start situation</button>
+                    <button class="cursorPointer" onclick="doValidateAssignment(this.title, true)">validate solution</button>
+                </div>
+                <div >
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
+                </div>
             </div>
             <div class="modal-body font10px">
                 <pre>code</pre>
