[MOJ-163] opdrachten met UTF8 characters kunnen compilen

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Masters of Java</title>
 
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}"/>
