--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,7 +111,7 @@
             <div class="p-2 align-self-center">
                 <h2>Team: [[${team}]]</h2>
                 <div class="p-2 align-self-center alignCenter">
-                    <button class="cursorPointer" data-toggle="modal" data-target="#editTeam-modal" >edit team</button>
+                    <button class="cursorPointer hide" data-toggle="modal" data-target="#editTeam-modal" >edit team</button>
                 </div>
             </div>
             <div class="p-2 text-center">
